--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@
     --fs-200: .75rem;
     --fs-300: .875rem;
     --fs-400: 1rem;
-    --fs-500: 1.5rem;
-    --fs-600: 2rem;
+    --fs-500: 1.25rem;
+    --fs-600: 1.75rem;
     --fs-700: 2.5rem;
     --fs-800: 3rem;
     --fs-900: 4rem;
@@ -48,7 +48,7 @@
     --fw-black: 900;
 
     /* font-families */
-    --ff-primary: 'Montserrat', sans-serif;
+    --ff-primary: 'Poppincs', sans-serif;
 
     /* Spacing */
     --spacer-sm: .5em;
@@ -60,7 +60,7 @@
     /* Border Radius */
     --br-sm: .25em;
     --br-md: .5em;
-    --br-lg: 1em;
+    --br-lg: 1.5em;
 }
 
 @media (max-width: 35em) {
@@ -69,9 +69,9 @@
         --fs-300: .75rem;
         --fs-400: .875rem;
         --fs-500: 1rem;
-        --fs-600: 1.25rem;
-        --fs-700: 1.5rem;
-        --fs-800: 2rem;
+        --fs-600: 1.5rem;
+        --fs-700: 2rem;
+        --fs-800: 2.5rem;
         --fs-900: 3rem;
     }
 }
@@ -130,20 +130,23 @@ h6 {
     line-height: 1.2;
 }
 
+.footer {
+    padding: var(--spacer-md);
+    height: 100px;
+}
+
+/* === HEADER === */
 .header {
     background-color: var(--clr-neutral-100);
 }
 
 .title {
-    font-size: var(--fs-800);
-    font-weight: var(--fw-extrabold);
+    font-size: var(--fs-600);
+    font-weight: var(--fw-semi-bold);
 }
 
-.footer {
-    position: fixed;
-    bottom: 0;
-    padding: var(--spacer-md);
-    height: 100px;
+.fa-book {
+    color: var(--clr-primary-500)
 }
 
 /* === MODAL === */
@@ -196,20 +199,45 @@ dialog::backdrop {
 /* === LIBRARY === */
 
 .library-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: var(--br-md);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: var(--br-lg);
+    margin: var(--spacer-lg) auto;
 }
 
 .book-card {
-    /* width: 145px;
-    height: 225px; */
+    display: flex;
+    flex-direction: column;
+    gap: var(--br-md);
+    width: 300px;
+    height: 300px;
     padding: var(--spacer-md);
-    color: var(--clr-primary-100);
-    background-color: var(--clr-primary-900);
+    color: var(--clr-primary-900);
+    background-color: var(--clr-neutral-100);
     border-radius: var(--br-md);
+    box-shadow: var(--shadow);
 }
 
+.book-title {
+    font-size: var(--fs-500);
+    font-weight: var(--fw-black);
+    letter-spacing: 1.2px;
+}
+.book-author {
+    font-weight: var(--fw-medium);
+}
+.book-edit-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.book-btn-container {
+    display: flex;
+    align-items: center;
+    gap: var(--spacer-md);
+}
 /* === BUTTONS === */
 
 .btn {
@@ -218,20 +246,37 @@ dialog::backdrop {
     background-color: var(--clr-primary-900);
     border: 0;
     border-radius: var(--br-sm);
+    box-shadow: var(--shadow);
+    transition: 0.3s ease;
 }
-
-.btn:hover,
-.btn:focus {
+.btn:hover {
     cursor: pointer;
     background-color: var(--clr-primary-800);
-    transition: 0.3s ease;
+}
+.btn-delete-book {
+    color: var(--clr-primary-400);
+    background: transparent;
+    border: 0;
+    transition: .03s ease;
+}
+.btn-edit-book {
+    color: var(--clr-primary-600);
+    background: transparent;
+    border: 0;
+    transition: .03s ease;
+}
+.btn-book-modal:hover,
+.btn-delete-book:hover,
+.btn-edit-book:hover {
+    cursor: pointer;
+    opacity: 80%;
 }
 
 /* ==== UTILITY CLASSES === */
 
 .container {
     max-width: var(--container-width);
-    padding: var(--spacer-lg);
+    padding: var(--spacer-sm) var(--spacer-lg);
     margin: 0 auto;
 }
 .flex {
