--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@
     /* Spacing */
     --spacer-sm: .5em;
     --spacer-md: 1em;
-    --spacer-lg: 2em;
+    --spacer-lg: 3em;
 
     --container-width: 1200px;
 
@@ -130,14 +130,8 @@ h6 {
     line-height: 1.2;
 }
 
-.footer {
-    position: absolute;
-    bottom: 0;
-    padding: var(--spacer-md);
-    height: 100px;
-}
-
 /* === HEADER === */
+
 .header {
     background-color: var(--clr-neutral-100);
 }
@@ -175,16 +169,11 @@ dialog::backdrop {
 }
 
 /* === FORM === */
+
 .book-form {
-    padding: var(--spacer-md) 0;
+    padding: var(--spacer-lg) 0;
 }
 
-.book-form-title {
-    margin-bottom: var(--spacer-sm);
-    font-size: var(--fs-600);
-    font-weight: var(--fw-bold);
-    color: var(--clr-primary-900);
-}
 .book-input-container {
     display: grid;
     grid-template-columns: 1fr 2fr;
@@ -202,14 +191,14 @@ dialog::backdrop {
     line-height: 0;
     background-color: var(--clr-primary-100);
     border: 0;
-    border-radius: var(--br-sm);
+    border-radius: var(--br-md);
     box-shadow: inset var(--shadow);
 }
 .book-input::placeholder {
     font-size: var(--fs-300);
 }
 
-/* === LIBRARY === */
+/* === BOOK CARDS === */
 
 .library-grid {
     display: flex;
@@ -220,12 +209,15 @@ dialog::backdrop {
 }
 
 .book-card {
+    position: relative;
     display: flex;
     flex-direction: column;
-    gap: var(--br-md);
-    width: 300px;
+    align-items: center;
+    justify-content: center;
+    gap: var(--spacer-md);
+    width: 275px;
     height: 300px;
-    padding: var(--spacer-md);
+    padding: var(--spacer-lg) var(--spacer-md);
     color: var(--clr-primary-900);
     background-color: var(--clr-neutral-100);
     border-radius: var(--br-md);
@@ -233,24 +225,71 @@ dialog::backdrop {
 }
 
 .book-title {
-    font-size: var(--fs-500);
+    font-size: var(--fs-600);
     font-weight: var(--fw-black);
     letter-spacing: 1.2px;
 }
 .book-author {
+    font-size: var(--fs-500);
     font-weight: var(--fw-medium);
 }
-.book-edit-container {
+
+.btn-delete-book,
+.btn-edit-book, 
+.book-status,
+.book-pages {
+    color: var(--clr-primary-300);
+    background: transparent;
+    border: 0;
+    transition: .03s ease;
+}
+
+.btn-delete-book:hover,
+.btn-edit-book:hover {
+    cursor: pointer;
+    opacity: 80%;
+}
+
+.book-header {
+    position: absolute;
+    top: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: var(--spacer-md);
+    padding: var(--spacer-sm);
+    width: 100%;
+    height: 35px;
+    background-color: var(--clr-primary-900);
+    border-top-left-radius: var(--br-md);
+    border-top-right-radius: var(--br-md);
+    box-shadow: var(--shadow);
 }
 
-.book-btn-container {
+.book-header-edit {
     display: flex;
-    align-items: center;
     gap: var(--spacer-md);
+    padding: var(--spacer-sm);
 }
+
+/* === FOOTER === */
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: var(--clr-neutral-100);
+}
+
+.github {
+    cursor: pointer;
+    transition: .03s ease;
+}
+
+.github:hover {
+    opacity: 60%;
+}
+
 /* === BUTTONS === */
 
 .btn {
@@ -258,7 +297,7 @@ dialog::backdrop {
     color: var(--clr-neutral-100);
     background-color: var(--clr-primary-900);
     border: 0;
-    border-radius: var(--br-sm);
+    border-radius: var(--br-md);
     box-shadow: var(--shadow);
     transition: 0.3s ease;
 }
@@ -267,27 +306,27 @@ dialog::backdrop {
     background-color: var(--clr-primary-800);
     box-shadow: inset var(--shadow);
 }
-.btn-delete-book {
-    color: var(--clr-primary-400);
-    background: transparent;
-    border: 0;
-    transition: .03s ease;
-}
-.btn-edit-book {
-    color: var(--clr-primary-600);
-    background: transparent;
-    border: 0;
-    transition: .03s ease;
-}
-.btn-book-modal:hover,
-.btn-delete-book:hover,
-.btn-edit-book:hover {
+
+.btn-book-modal:hover {
     cursor: pointer;
     opacity: 80%;
 }
 
 .btn-form {
-    width: 150px;
+    width: 100%;
+}
+
+.btn-cancel {
+    cursor: pointer;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    background: transparent;
+    border: 0;
+}
+
+.btn-cancel-svg {
+    fill: var(--clr-primary-900);
 }
 
 /* ==== UTILITY CLASSES === */
